--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               
               <tr>
                 <td style="padding: 0;">
-                  <img src="/banner.png" alt="1xBet banner" border="0" width="600"
+                  <img src="./banner.png" alt="1xBet banner" border="0" width="600"
                     style="width: 100%; max-width: 600px;" />
                 </td>
               </tr>
@@ -166,7 +166,7 @@
             <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="width: 100%; max-width: 600px;">
               <tr>
                 <td style="padding: 0 0 25px 0;">
-                  <img src="/block2.png" alt="1xBet banner" border="0" width="600"
+                  <img src="./block2.png" alt="1xBet banner" border="0" width="600"
                     style="width: 100%; max-width: 600px;"/>
                 </td>
               </tr>
@@ -235,7 +235,7 @@
                     <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: left;">
                       <tr>
                         <td style="padding: 0 0 15px 0;">
-                          <img src="/block3.png" alt="Icons" border="0" width="260" style="max-width: 260px;" />
+                          <img src="./block3.png" alt="Icons" border="0" width="260" style="max-width: 260px;" />
                         </td>
                       </tr>
                       <tr>
